# robotframework-pandas

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: robot-test.yml  static.yml
PandasLibrary/: __init__.py
docs/: PandasLibrary.html
src/PandasLibrary/: __init__.py
src/PandasLibrary/configs/: global.py
tests/: test_pandas.robot
